--- a/xlang/CMakeLists.txt
+++ b/xlang/CMakeLists.txt
@@ -1,6 +1,10 @@
+project(xlang CXX)
+
 set(files
         src/main.cpp)
 
 add_executable(xlang ${files})
 
-target_link_libraries(xlang PRIVATE Lexer)
+target_link_libraries(xlang PRIVATE xlanger)
+
+install(TARGETS xlang)
